--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,149 @@
 */
 
 .page {
+  padding-block-start: 102px;
+  color: var(--second-background-color);
+  font-family: var(--main-font-family, sans-serif);
+  font-size: 18px;
+  background-color: var(--main-background-color);
+  background-image: var(--bg);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--card-font-weight, 400);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem) 0 25px;
+  font-family: var(--accent-font);
+  text-transform: uppercase;
+}
+
+.header__container {
+  margin: auto;
+  margin-block-end: 108px;
+  border: solid 2px var(--second-background-color);
+  background-color: var(--main-background-color);
+  inline-size: var(--card-container-size);
+}
+
+.header__emblem {
+  margin-block-end: 20px;
+  font-size: var(--emblem-font-size);
+  text-decoration: none;
+}
+
+.header__title {
+  margin-block-end: 25px;
+  font-size: var(--title-font-size);
+}
+
+.header__theme-menu {
+  padding-inline-start: 20px;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 14px;
+}
+
+.theme-menu__item {
+  font-size: 14px;
+}
+
+.theme-menu__button {
+  position: relative;
+  border: none;
+  padding: 0;
+  font-size: inherit;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  animation: drifting 0.5s infinite ease-in-out alternate;
+  inset-inline-start: -19px;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled:focus {
+  outline: none;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  background-color: var(--second-background-color);
+  transition: transform 0.3s ease;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 2px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+  background-color: var(--main-background-color);
+  padding-block-end: 103px;
+}
+
+.content__title {
+  font-family: var(--main-font-family);
+  font-size: 18px;
+  font-variation-settings: "wght" var(--card-subtitle-font-weight, 700);
+  border: 2px solid var(--main-background-color);
+  color: var(--font-text-color);
+  padding: 5px 10px;
+}
+
+.content__decor__card {
+  position: relative;
+  overflow: hidden;
+}
+
+.content__text__card {
+  font-size: 18px;
+  font-variation-settings: "wght" var(--card-font-weight, 400);
+  display: flex;
+  flex-direction: column;
+  row-gap: 27px;
+  padding: 25px;
+}
+
+.button__card {
+  display: flex;
+  justify-content: end;
+  padding: 0 25px 25px;
+  column-gap: 5px;
+}
+
+.button__card__text {
+  font-size: 14px;
+  font-variation-settings: "wght" var(--card-font-weight, 400);
+  font-family: var( --accent-font);
+  padding: 9px 17px;
+  min-width: 138px;
+  background-color: transparent;
 }
