--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,13 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+
+@keyframes drifting {
+  from {
+    inset-inline-start: -19px;
+  }
+  to {
+    inset-inline-start: -24px;
+  }
+}
