--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@
   block-size: 2px;
 }
 
-/* ----------------------------Body------------------------------------------------------ */
+/* -------------------------------------------------------------------------------- */
 
 .main {
   display: flex;
@@ -229,11 +229,19 @@
   font-variation-settings: "wght" var(--card-font-weight, 400);
 }
 
+/* ---------------button/icon---------------------------- */
+
 .button__card {
   display: flex;
   justify-content: end;
   column-gap: 5px;
   padding: 0 25px 25px;
+}
+
+.button__text {
+  position: relative;
+  z-index: 2;
+  align-self: center;
 }
 
 .content__card__like {
@@ -259,6 +267,22 @@
 
 .button__heart:focus-visible {
   border: 2px solid var(--second-background-color);
+  outline: none;
+  transition: box-shadow 0.3s;
+}
+
+.button::after {
+  content: "";
+  position: absolute;
+  inline-size: 100%;
+  block-size: 100%;
+  inset-inline-start: 0;
+  inset-block-start: 0;
+}
+
+.button:hover:after {
+  background-color: var(--color-accent);
+  animation: button-hover 0.5s ease-in-out;
 }
 
 .card__icon-button {
@@ -270,7 +294,20 @@
   block-size: 38px;
 }
 
-.like__icon {
+.card__icon-button:hover {
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--color-accent);
+  transition: border 0.3s ease;
+}
+
+.like-icon {
   position: relative;
   z-index: 1;
   display: flex;
@@ -283,7 +320,89 @@
   block-size: 36px;
 }
 
-.like-icon .heart {
-  transition: fill 0.1s;
-  transform-origin: center center;
+/* -----------footer----------------------------------- */
+
+.footer {
+  margin: 50px auto 0;
+  background-color: var(--main-background-color);
+}
+
+.footer-button {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  font-family: var( --accent-font);
+  gap: 8px;
+  padding: 19px;
+  font-size: 14px;
+  background-color: transparent;
+  transition: box-shadow 0.3s;
+  transition-timing-function: ease;
+  cursor: pointer;
+  min-inline-size: clamp(19.125rem, 2.723vw + 18.487rem, 20.938rem);
+}
+
+.footer__button:focus {
+  outline: none;
+}
+
+/* ------------Диалог-окно----------------------------------- */
+
+.img-floppy {
+  position: relative;
+  z-index: 2;
+  margin: auto;
+  color: var(--second-background-color);
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+}
+
+.dialog {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  color: var(--second-background-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  background-color: var(--main-background-color);
+  transition: opacity 0.3s ease-in-out;
+  inline-size: clamp(21.313rem, 1.502vw + 20.96rem, 22.313rem);
+}
+
+dialog:not([open]) {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.dialog__content {
+  display: grid;
+  grid-template-columns: 0.3fr 1fr;
+  grid-template-rows: 1fr fit-content;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+.dialog-img {
+  align-self: center;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.dialog__button {
+  grid-column: 1 / 3;
+  grid-row: 2;
+  padding: 9px 0;
+  text-transform: uppercase;
+  color: var(--second-background-color);
+  background-color: var(--main-background-color);
+}
+
+.dialog::backdrop {
+  background-color: rgb(0 0 0 / 75%);
 }
