--- a/styles/style.css
+++ b/styles/style.css
@@ -158,13 +158,13 @@
 
 .card__image-label {
   position: absolute;
+  z-index: 3;
   opacity: 0.5;
   color: var(--second-background-color);
   font-family: var(--accent-font);
   font-weight: var(--card-font-weight);
   font-size: 14px;
   font-style: normal;
-  z-index: 3;
   line-height: normal;
   text-transform: uppercase;
   text-shadow: -1px 0 var(--text-color), 0 1px var(--text-color),
@@ -238,15 +238,28 @@
   column-gap: 5px;
   padding: 0 25px 25px;
 }
+
 .card__icon-button {
   display: flex;
+  justify-content: center;
   border: 2px solid transparent;
+  padding: 0;
   background-color: inherit;
   transition: border 0.3s ease;
   cursor: unset;
   block-size: 38px;
-  justify-content: center;
-  padding: 0;
+}
+
+.button {
+  position: relative;
+  border: 2px solid var(--second-background-color);
+  overflow: hidden;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 90%;
+  text-transform: inherit;
+  background-color: inherit;
+  transition: box-shadow 0.3s;
 }
 
 .card__icon-button:hover {
@@ -258,9 +271,9 @@
 }
 
 .card__icon-button:focus-visible {
-  border: 2px solid var(--second-background-color
-  );
+  border: 2px solid var(--second-background-color);
   transition: border 0.3s ease;
+  cursor: pointer;
 }
 
 .button__text {
@@ -288,8 +301,8 @@
 }
 
 .button:hover {
-  cursor: pointer;
   background-color: var(--main-background-color);
+  cursor: pointer;
 }
 
 .button:focus {
@@ -305,6 +318,9 @@
 .button::after {
   content: "";
   position: absolute;
+  background-color: var(--second-background-color);
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(-100%);
   inline-size: 100%;
   block-size: 100%;
   inset-inline-start: 0;
@@ -312,8 +328,8 @@
 }
 
 .button:hover:after {
-  background-color: var(--second-background-color);
-  animation: button-hover 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(0);
 }
 
 .button:hover .button__text {
@@ -322,9 +338,9 @@
 }
 
 .button:hover .img-floppy {
+  z-index: 2;
   fill: var(--main-background-color);
   stroke: var(--main-background-color);
-  z-index: 2;
   mix-blend-mode: difference;
 }
 
@@ -352,9 +368,9 @@
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
-  font-family: var( --accent-font);
   gap: 8px;
   padding: 10px;
+  font-family: var(--accent-font);
   font-size: 14px;
   background-color: var(--main-background-color);
   transition: box-shadow 0.3s;
@@ -418,11 +434,12 @@ dialog:not([open]) {
   grid-column: 1 / 3;
   grid-row: 2;
   padding: 9px 0;
-  text-transform: uppercase;
   color: var(--second-background-color);
+  text-transform: uppercase;
   background-color: var(--main-background-color);
 }
 
 .dialog::backdrop {
   background-color: rgb(0 0 0 / 75%);
 }
+
