--- a/styles/themes.css
+++ b/styles/themes.css
@@ -18,7 +18,7 @@
     repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
     linear-gradient(180deg, #007f0c 0%, #004306 100%);
   --text-color: #00cc14;
-  --contour-color: #00cc14;
+  --like-color: #000;
   --fill-color: #ff0000;
 }
 
@@ -39,7 +39,7 @@
     repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgba(0, 0, 0, 0) 2px 4px),
     linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
   --fill-color: #ff0000;
-  --contour-color: #000;
+  --like-color: #fff;
   --text-color: #fff;
 }
 
@@ -57,7 +57,7 @@
       repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
       linear-gradient(180deg, #007f0c 0%, #004306 100%);
     --text-color: #00cc14;
-    --contour-color: #00cc14;
+    --like-color: #000;
     --fill-color: #ff0000;
   }
 }
