--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,7 +18,7 @@
   --emblem-font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   --title-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   --button-text-color: var(--main-background-color);
-  --contour-color: #000;
+  --like-color: #fff;
   --fill-color: #ff0000;
   --text-color: #fff;
 }
