--- a/styles/style.css
+++ b/styles/style.css
@@ -280,7 +280,6 @@
   position: relative;
   z-index: 2;
   align-self: center;
-  background-color: transparent;
 }
 
 .content__card__like {
@@ -379,6 +378,10 @@
   min-inline-size: clamp(19.125rem, 2.723vw + 18.487rem, 20.938rem);
 }
 
+.save-button {
+  background-color: transparent;
+}
+
 .footer__button:focus {
   outline: none;
 }
@@ -443,3 +446,39 @@ dialog:not([open]) {
   background-color: rgb(0 0 0 / 75%);
 }
 
+/* ------------------------------------------------------- */
+
+@media (min-width: 1440px) {
+  .header {
+    width: calc(clamp(23.438rem, 30.141vw + 16.373rem, 43.5rem));
+  }
+
+  .content__decor__card {
+    max-width: 696px;
+  }
+
+  .button__card__text {
+    max-width: 38px;
+  }
+
+  .img-floppy {
+    display: flex;
+    margin: 0px;
+    height: 21px;
+    width: 21px;
+  }
+
+  .footer {
+    margin: 0px;
+  }
+
+  .save-button {
+    display: flex;
+    align-items: center;
+  }
+
+  .footer-button {
+    padding: 8px;
+    min-inline-size: 0px;
+  }
+}
