--- a/styles/themes.css
+++ b/styles/themes.css
@@ -56,8 +56,8 @@
     --bg: repeating-linear-gradient(90deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
       repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
       linear-gradient(180deg, #007f0c 0%, #004306 100%);
-    --text-color: #00cc14;
-    --like-color: #000;
+    --text-color: #000;
+    --contour-color: #00cc14;
     --fill-color: #ff0000;
   }
 }
