--- a/styles/style.css
+++ b/styles/style.css
@@ -277,16 +277,15 @@
 }
 
 .button__text {
-  font-family: var(--accent-font, sans-serif);
-  font-size: 14px;
-  line-height: 90%; /* 12.6px */
-  position: relative;
-  mix-blend-mode: difference;
   position: relative;
   z-index: 2;
   align-self: center;
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  line-height: 90%; /* 12.6px */
+  mix-blend-mode: difference;
+  color: var(--text-color);
 }
-
 
 .content__card__like {
   display: flex;
@@ -298,8 +297,8 @@
 .button__card__text {
   min-width: 130px;
   padding: 9px 17px;
-  font-family: var(--accent-font);
   color: var(--text-color);
+  font-family: var(--accent-font);
   font-size: 14px;
   background-color: transparent;
   transition: box-shadow 0.3s ease;
@@ -307,7 +306,6 @@
 }
 
 .button:hover {
-  background-color: var(--main-background-color);
   cursor: pointer;
 }
 
@@ -345,9 +343,9 @@
 }
 
 .button:hover .img-floppy {
-  z-index: 2;
-  fill: var(--main-background-color);
-  stroke: var(--main-background-color);
+  z-index: 3;
+  fill: var(--text-color);
+  stroke: var(--text-color);
   mix-blend-mode: difference;
 }
 
@@ -358,7 +356,7 @@
   justify-content: center;
   align-items: center;
   overflow: visible;
-  fill: var(--second-background-color);
+  /* fill: var(--second-background-color); */
   cursor: pointer;
   inline-size: 39px;
   block-size: 36px;
@@ -372,18 +370,20 @@
 }
 
 .footer-button {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
-  gap: 8px;
   padding: 10px;
+  color: var(--text-color);
   font-family: var(--accent-font);
   font-size: 14px;
-  background-color: var(--main-background-color);
   transition: box-shadow 0.3s;
   transition-timing-function: ease;
   cursor: pointer;
   min-inline-size: clamp(19.125rem, 2.723vw + 18.487rem, 20.938rem);
+  mix-blend-mode: difference;
 }
 
 .save-button {
@@ -400,9 +400,10 @@
   position: relative;
   z-index: 2;
   margin-block-start: 25px;
-  color: var(--second-background-color);
+  color: var(--text-color);
   inline-size: 39px;
   block-size: 39px;
+  mix-blend-mode: difference;
 }
 
 .dialog {
@@ -412,7 +413,7 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  color: var(--second-background-color);
+  color: var(--font-text-color);
   font-family: var(--accent-font);
   font-size: 14px;
   line-height: 150%;
@@ -471,9 +472,9 @@ dialog:not([open]) {
 
   .img-floppy {
     display: flex;
-    margin: 0px;
-    height: 21px;
     width: 21px;
+    height: 21px;
+    margin: 0px;
   }
 
   .footer {
