--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,23 +5,6 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
-:root.theme-dark {
-  --second-background-color: #00cc14;
-  --main-background-color: #000;
-  --font-text-color: #00cc14;
-  --card-container-size: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
-  --emblem-font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
-  --title-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
-  --card-font-weight: 465;
-  --card-subtitle-font-weight: 785;
-  --bg: repeating-linear-gradient(90deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-    repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-    linear-gradient(180deg, #007f0c 0%, #004306 100%);
-  --text-color: #00cc14;
-  --like-color: #000;
-  --fill-color: #ff0000;
-}
-
 :root.theme-light {
   --second-background-color: #000;
   --font-text-color: #000;
@@ -39,8 +22,25 @@
     repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgba(0, 0, 0, 0) 2px 4px),
     linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
   --fill-color: #ff0000;
-  --like-color: #fff;
+  --like-color: #000;
   --text-color: #fff;
+}
+
+:root.theme-dark {
+  --second-background-color: #00cc14;
+  --main-background-color: #000;
+  --font-text-color: #00cc14;
+  --card-container-size: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  --emblem-font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  --title-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  --card-font-weight: 465;
+  --card-subtitle-font-weight: 785;
+  --bg: repeating-linear-gradient(90deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+    repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
+    linear-gradient(180deg, #007f0c 0%, #004306 100%);
+  --text-color: #00cc14;
+  --like-color: #00cc14;
+  --fill-color: #ff0000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -57,7 +57,7 @@
       repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
       linear-gradient(180deg, #007f0c 0%, #004306 100%);
     --text-color: #00cc14;
-    --like-color: #000;
+    --like-color: #00cc14;
     --fill-color: #ff0000;
   }
 }
