--- a/styles/animations.css
+++ b/styles/animations.css
@@ -43,7 +43,7 @@
 }
 
 .like-icon:hover .core {
-  fill: var(--contour-color);
+  fill: var(--like-color);
   transition: fill 0.3s linear;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .like-icon:hover .main-body {
-  fill: var(--contour-color);
+  fill: var(--like-color);
   transition: fill 0.3s linear 0.05s;
 }
 
