--- a/styles/style.css
+++ b/styles/style.css
@@ -294,7 +294,7 @@
   gap: 7px;
 }
 
-.button__card__text {
+.card__like-button {
   min-width: 130px;
   padding: 9px 17px;
   color: var(--text-color);
@@ -307,6 +307,7 @@
 
 .button:hover {
   cursor: pointer;
+  transition: fill 0.3s linear;
 }
 
 .button:focus {
@@ -356,7 +357,7 @@
   justify-content: center;
   align-items: center;
   overflow: visible;
-  /* fill: var(--second-background-color); */
+  fill: var(--second-background-color);
   cursor: pointer;
   inline-size: 39px;
   block-size: 36px;
@@ -466,7 +467,7 @@ dialog:not([open]) {
     max-width: 696px;
   }
 
-  .button__card__text {
+  .card__like-button {
     max-width: 38px;
   }
 
