--- a/styles/themes.css
+++ b/styles/themes.css
@@ -14,13 +14,9 @@
   --title-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   --card-font-weight: 400;
   --card-subtitle-font-weight: 700;
-  --bg: repeating-linear-gradient(
-      90deg,
-      #d3d3d3 0 2px,
-      rgba(0, 0, 0, 0) 2px 4px
-    ),
-    repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-    linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+  --bg: repeating-linear-gradient(to right, #d3d3d3 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 2px, transparent 4px),
+    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
   --fill-color: #ff0000;
   --like-color: #000;
   --text-color: #fff;
@@ -35,9 +31,9 @@
   --title-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   --card-font-weight: 465;
   --card-subtitle-font-weight: 785;
-  --bg: repeating-linear-gradient(90deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-    repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-    linear-gradient(180deg, #007f0c 0%, #004306 100%);
+  --bg: repeating-linear-gradient(to right, #000 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #000 2px, transparent 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
   --text-color: #00cc14;
   --like-color: #00cc14;
   --fill-color: #ff0000;
@@ -53,9 +49,9 @@
     --title-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
     --card-font-weight: 465;
     --card-subtitle-font-weight: 785;
-    --bg: repeating-linear-gradient(90deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-      repeating-linear-gradient(180deg, #000 0 2px, rgba(0, 0, 0, 0) 2px 4px),
-      linear-gradient(180deg, #007f0c 0%, #004306 100%);
+    --bg: repeating-linear-gradient(to right, #000 2px, transparent 4px),
+      repeating-linear-gradient(to bottom, #000 2px, transparent 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
     --text-color: #00cc14;
     --like-color: #00cc14;
     --fill-color: #ff0000;
