--- a/styles/style.css
+++ b/styles/style.css
@@ -376,7 +376,6 @@
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
-  padding: 10px;
   color: var(--text-color);
   font-family: var(--accent-font);
   font-size: 14px;
@@ -389,6 +388,13 @@
 
 .save-button {
   background-color: transparent;
+  max-width: 335px;
+  padding: 15px;
+  text-wrap: nowrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
 }
 
 .footer__button:focus {
@@ -400,10 +406,9 @@
 .img-floppy {
   position: relative;
   z-index: 2;
-  margin-block-start: 25px;
   color: var(--text-color);
-  inline-size: 39px;
-  block-size: 39px;
+  inline-size: 28px;
+  block-size: 28px;
   mix-blend-mode: difference;
 }
 
@@ -488,7 +493,6 @@ dialog:not([open]) {
   }
 
   .footer-button {
-    padding: 8px;
     min-inline-size: 0px;
   }
 }
