--- a/styles/style.css
+++ b/styles/style.css
@@ -425,32 +425,36 @@
   inline-size: clamp(21.3rem, 1.5vw + 21rem, 22.3rem);
 }
 
+.dialog__content[open] {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr fit-content;
+  margin-block-end: 30px;
+}
+
 dialog:not([open]) {
   opacity: 0;
   pointer-events: none;
 }
 
-.dialog__content {
-  display: grid;
-  grid-template-columns: 0.3fr 1fr;
-  grid-template-rows: 1fr fit-content;
-  gap: 20px;
-  margin-block-end: 30px;
-}
-
 .dialog-img {
-  align-self: center;
   inline-size: 39px;
   block-size: 39px;
+  margin-right: 20px;
+}
+
+.dialog__form {
+  grid-column: 1 / 3;
+  grid-row: 2;
 }
 
 .dialog__button {
-  grid-column: 1 / 3;
-  grid-row: 2;
+  width: 100%;
   padding: 9px 0;
   color: var(--second-background-color);
   text-transform: uppercase;
   background-color: var(--main-background-color);
+  margin-top: 30px;
 }
 
 .dialog::backdrop {
